--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ section {
 /* fix padding issues*/
 .container {
     width:20rem !important;
-    padding-top: 20px !important;
+    padding: 20px !important;
     border-radius: 25px !important;
 }
 .container img {
